--- a/index.html
+++ b/index.html
@@ -64,6 +64,11 @@ nav span{
   padding-bottom:0;
 }
 
+/* 🔑 SUBIMOS CONTACTO */
+.section:last-of-type .section-block{
+  top:200px;
+}
+
 .section-block{
   position:sticky;
   top:260px;
@@ -151,23 +156,6 @@ h1{
   scrollbar-color:#444 transparent;
 }
 
-.portfolio-carousel::-webkit-scrollbar{height:6px}
-.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
-
-.project-card{
-  min-width:460px;
-  text-decoration:none;
-  color:inherit;
-  opacity:0;
-  transform:translateY(12px);
-  transition:opacity .8s ease, transform .8s ease;
-}
-
-.project-card.is-visible{
-  opacity:1;
-  transform:none;
-}
-
 /* ========= CV ========= */
 .timeline{
   position:relative;
@@ -177,7 +165,7 @@ h1{
 
 /* ========= CONTACTO — FRAMER ========= */
 .contact-framer{
-  margin-top:24px; /* ← CAMBIO: antes 60px */
+  margin-top:0; /* ← SUBIDO MUCHO */
   display:flex;
   flex-direction:column;
   gap:18px;
@@ -251,17 +239,8 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, técnico y creativo.
       </p>
-      <img src="foto.jpg" alt="">
     </div>
   </div>
 </section>
@@ -269,26 +248,20 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
-        <!-- proyectos -->
-      </div>
-    </div>
   </div>
 </section>
 
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-    <div class="timeline"></div>
   </div>
 </section>
 
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
-    <div class="contact-framer">
 
+    <div class="contact-framer">
       <a href="tel:+34600000000" class="contact-card">
         <div class="contact-left">
           <span>Teléfono</span>
@@ -312,8 +285,8 @@ h1{
         </div>
         <div class="contact-arrow">→</div>
       </a>
-
     </div>
+
   </div>
 </section>
 
