--- a/index.html
+++ b/index.html
@@ -59,16 +59,6 @@ nav span{
   padding:180px 10vw 160px 22vw;
 }
 
-.section:last-of-type{
-  min-height:calc(100vh - 160px);
-  padding-bottom:0;
-}
-
-/* 🔑 SUBIMOS CONTACTO */
-.section:last-of-type .section-block{
-  top:200px;
-}
-
 .section-block{
   position:sticky;
   top:260px;
@@ -156,6 +146,23 @@ h1{
   scrollbar-color:#444 transparent;
 }
 
+.portfolio-carousel::-webkit-scrollbar{height:6px}
+.portfolio-carousel::-webkit-scrollbar-thumb{background:#444;border-radius:6px}
+
+.project-card{
+  min-width:460px;
+  text-decoration:none;
+  color:inherit;
+  opacity:0;
+  transform:translateY(12px);
+  transition:opacity .8s ease, transform .8s ease;
+}
+
+.project-card.is-visible{
+  opacity:1;
+  transform:none;
+}
+
 /* ========= CV ========= */
 .timeline{
   position:relative;
@@ -165,7 +172,7 @@ h1{
 
 /* ========= CONTACTO — FRAMER ========= */
 .contact-framer{
-  margin-top:0; /* ← SUBIDO MUCHO */
+  margin-top:60px;
   display:flex;
   flex-direction:column;
   gap:18px;
@@ -239,7 +246,8 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico, técnico y creativo.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
+        técnico y creativo, con formación en diseño industrial y electricidad.
       </p>
     </div>
   </div>
