--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ h1{
   transform:none;
 }
 
-/* ========= CV TIMELINE ========= */
+/* ========= CV ========= */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -177,8 +177,6 @@ h1{
   width:1px;
   height:0;
   background:linear-gradient(#fff,#777);
-  transition:height .9s ease-out;
-  transition-delay:.25s;
 }
 
 .timeline-item{
@@ -220,6 +218,33 @@ h1{
 .timeline-card span{
   font-size:13px;
   color:#888;
+}
+
+/* ========= BOTÓN DESCARGA CV (NUEVO) ========= */
+.cv-download{
+  margin-top:32px;
+  padding-left:8px;
+}
+
+.cv-download a{
+  display:inline-flex;
+  align-items:center;
+  gap:12px;
+  padding:14px 22px;
+  border-radius:999px;
+  background:rgba(255,255,255,.05);
+  border:1px solid rgba(255,255,255,.12);
+  color:#f5f5f5;
+  font-size:14px;
+  letter-spacing:.12em;
+  text-transform:uppercase;
+  text-decoration:none;
+  transition:.3s ease;
+}
+
+.cv-download a:hover{
+  background:rgba(255,255,255,.08);
+  transform:translateY(-1px);
 }
 
 /* ========= CONTACTO ========= */
@@ -294,15 +319,8 @@ h1{
     <h1>Sobre mí</h1>
     <div class="about">
       <p>
-        Ingeniero en diseño industrial de 24 años, con base en Valencia. No me considero una persona
-        enfocada en un campo fijo, sino alguien con un perfil ecléctico, flexible y capaz de adaptarse
-        a distintos entornos y contextos de trabajo. No me sitúo ni en un extremo puramente artístico
-        ni estrictamente técnico, sino en un punto intermedio que me permite comprender y conectar
-        ambas dimensiones del diseño. He cursado mis estudios en la Universitat Jaume I de Castellón,
-        continuado en la Universitat Politècnica de València y completado con un programa Erasmus
-        en Londres. Cuento además con una formación profesional en electricidad, que me ha aportado
-        una base técnica sólida y una forma de pensar práctica. Disfruto de todo el proceso de diseño
-        desde la fase de análisis hasta la materialización.
+        Ingeniero en diseño industrial de 24 años, con base en Valencia. Perfil ecléctico,
+        técnico y creativo, con formación en diseño industrial y electricidad.
       </p>
       <img src="foto.jpg" alt="">
     </div>
@@ -325,9 +343,17 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
+
+    <!-- BOTÓN DESCARGA -->
+    <div class="cv-download">
+      <a href="cv-luis-blasco.pdf" download>
+        Descargar CV detallado
+      </a>
+    </div>
+
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
-      <!-- items -->
+      <!-- timeline items -->
     </div>
   </div>
 </section>
@@ -336,6 +362,26 @@ h1{
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
+    <div class="contact-framer">
+      <a href="tel:+34600000000" class="contact-card">
+        <div class="contact-left">
+          <span>Teléfono</span>
+          <strong>+34 600 000 000</strong>
+        </div>
+      </a>
+      <a href="mailto:luis@example.com" class="contact-card">
+        <div class="contact-left">
+          <span>Email</span>
+          <strong>luis@example.com</strong>
+        </div>
+      </a>
+      <a href="https://www.linkedin.com" target="_blank" class="contact-card">
+        <div class="contact-left">
+          <span>LinkedIn</span>
+          <strong>Perfil profesional</strong>
+        </div>
+      </a>
+    </div>
   </div>
 </section>
 
@@ -345,22 +391,14 @@ document.querySelectorAll("nav span").forEach((b,i)=>{
     .scrollIntoView({behavior:"smooth"});
 });
 
-/* Línea CV con más delay */
 const timeline=document.querySelector(".timeline");
 const line=document.getElementById("timelineLine");
-let last=0;
 
 window.addEventListener("scroll",()=>{
   if(!timeline||!line) return;
-  const now=Date.now();
-  if(now-last<80) return; // throttling
-  last=now;
-
-  requestAnimationFrame(()=>{
-    const rect=timeline.getBoundingClientRect();
-    const visible=Math.min(window.innerHeight-rect.top,rect.height);
-    line.style.height=Math.max(0,visible)+"px";
-  });
+  const rect=timeline.getBoundingClientRect();
+  const visible=Math.min(window.innerHeight-rect.top,rect.height);
+  line.style.height=Math.max(0,visible)+"px";
 });
 </script>
 
