--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ h1{
   text-transform:uppercase;
 }
 
-/* ========= CV ========= */
+/* ========= CV TIMELINE ========= */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -242,60 +242,43 @@ h1{
   padding:28px;
 }
 
-/* ========= CONTACTO — FRAMER FINO ========= */
-.contact-framer{
-  margin-top:60px;
-  display:flex;
-  flex-direction:column;
-  gap:18px;
-  padding-left:8px;
-}
-
-.contact-card{
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  padding:20px 26px;
-  border-radius:18px;
-  background:rgba(255,255,255,.035);
-  border:0.75px solid rgba(255,255,255,.07);
-  text-decoration:none;
-  color:#f5f5f5;
-  transition:.35s ease;
-}
-
-.contact-card:hover{
-  transform:translateY(-2px);
-  background:rgba(255,255,255,.055);
-}
-
-.contact-left{
-  display:flex;
-  flex-direction:column;
-}
-
-.contact-left span{
-  font-size:11px;
-  letter-spacing:.18em;
-  color:#777;
+.timeline-card h3{
+  font-size:18px;
+  font-weight:500;
+  letter-spacing:.12em;
   text-transform:uppercase;
+  margin-bottom:16px;
 }
 
-.contact-left strong{
-  margin-top:6px;
-  font-size:19px;
-  font-weight:400;
+.timeline-card strong{
+  display:block;
+  font-size:16px;
 }
 
-.contact-arrow{
-  font-size:17px;
-  color:#666;
-  transition:.35s ease;
+.timeline-card span{
+  font-size:13px;
+  color:#888;
 }
 
-.contact-card:hover .contact-arrow{
-  transform:translateX(4px);
-  color:#aaa;
+/* ========= CONTACTO ========= */
+.contact{
+  margin-top:40px;
+}
+
+.contact a{
+  display:block;
+  margin-top:24px;
+  padding-left:8px;
+  font-size:18px;
+  color:#f5f5f5;
+  text-decoration:none;
+}
+
+.contact a span{
+  color:#777;
+  font-size:12px;
+  letter-spacing:.18em;
+  text-transform:uppercase;
 }
 
 </style>
@@ -311,6 +294,7 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
+<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -318,6 +302,7 @@ h1{
   </div>
 </section>
 
+<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
@@ -338,56 +323,112 @@ h1{
   </div>
 </section>
 
+<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
     <div class="portfolio-wrapper">
       <div class="portfolio-carousel">
-        <!-- proyectos -->
+
+        <a href="node.html" class="project-card">
+          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>NODE</h2>
+            <span>Proyecto final de grado</span>
+          </div>
+        </a>
+
+        <a href="sixay.html" class="project-card">
+          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Sixay · Cómoda</h2>
+            <span>Diseño de mobiliario</span>
+          </div>
+        </a>
+
+        <a href="exploracion.html" class="project-card">
+          <div class="project-image"><img src="secador2.jpg" alt=""></div>
+          <div class="project-inner">
+            <h2>Exploración material</h2>
+            <span>Proyecto experimental</span>
+          </div>
+        </a>
+
+        <a href="conceptual.html" class="project-card">
+          <div class="project-image"></div>
+          <div class="project-inner">
+            <h2>Proyecto conceptual</h2>
+            <span>Diseño de producto</span>
+          </div>
+        </a>
+
       </div>
     </div>
   </div>
 </section>
 
+<!-- CV -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
+
     <div class="timeline">
       <div class="timeline-line" id="timelineLine"></div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Jaume I</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Grado en Ingeniería en Diseño Industrial</strong>
+          <span>Universitat Politècnica de València</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Formación</h3>
+          <strong>Programa Erasmus</strong>
+          <span>Londres</span>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Idiomas</h3>
+          <strong>Español · Inglés · Húngaro</strong>
+        </div>
+      </div>
+
+      <div class="timeline-item">
+        <div class="timeline-card">
+          <h3>Software</h3>
+          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
+          <span>Fusion 360 · Sinutrain · 3ds Max</span>
+        </div>
+      </div>
+
     </div>
   </div>
 </section>
 
+<!-- CONTACTO -->
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
-
-    <div class="contact-framer">
-
-      <a href="tel:+34600000000" class="contact-card">
-        <div class="contact-left">
-          <span>Teléfono</span>
-          <strong>+34 600 000 000</strong>
-        </div>
-        <div class="contact-arrow">→</div>
+    <div class="contact">
+      <a href="mailto:luis@example.com">
+        luis@example.com<br><span>Email</span>
       </a>
-
-      <a href="mailto:luis@example.com" class="contact-card">
-        <div class="contact-left">
-          <span>Email</span>
-          <strong>luis@example.com</strong>
-        </div>
-        <div class="contact-arrow">→</div>
+      <a href="https://www.linkedin.com" target="_blank">
+        LinkedIn<br><span>Perfil profesional</span>
       </a>
-
-      <a href="https://www.linkedin.com" target="_blank" class="contact-card">
-        <div class="contact-left">
-          <span>LinkedIn</span>
-          <strong>Perfil profesional</strong>
-        </div>
-        <div class="contact-arrow">→</div>
-      </a>
-
     </div>
   </div>
 </section>
