--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ h1{
   text-transform:uppercase;
 }
 
-/* ========= CV TIMELINE ========= */
+/* ========= CV ========= */
 .timeline{
   position:relative;
   margin-top:60px;
@@ -242,43 +242,43 @@ h1{
   padding:28px;
 }
 
-.timeline-card h3{
-  font-size:18px;
-  font-weight:500;
-  letter-spacing:.12em;
-  text-transform:uppercase;
-  margin-bottom:16px;
-}
-
-.timeline-card strong{
-  display:block;
-  font-size:16px;
-}
-
-.timeline-card span{
-  font-size:13px;
-  color:#888;
-}
-
-/* ========= CONTACTO ========= */
+/* ========= CONTACTO — FRAMER STYLE ========= */
 .contact{
-  margin-top:40px;
+  margin-top:48px;
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:24px;
+  padding-left:8px;
 }
 
 .contact a{
-  display:block;
-  margin-top:24px;
-  padding-left:8px;
-  font-size:18px;
+  position:relative;
+  display:flex;
+  flex-direction:column;
+  gap:12px;
+  padding:28px;
+  border-radius:20px;
+  background:rgba(255,255,255,.04);
+  border:1px solid rgba(255,255,255,.08);
   color:#f5f5f5;
   text-decoration:none;
+  transition:
+    transform .35s ease,
+    background .35s ease,
+    box-shadow .35s ease;
 }
 
 .contact a span{
-  color:#777;
   font-size:12px;
   letter-spacing:.18em;
   text-transform:uppercase;
+  color:#888;
+}
+
+.contact a:hover{
+  transform:translateY(-4px);
+  background:rgba(255,255,255,.06);
+  box-shadow:0 20px 40px rgba(0,0,0,.35);
 }
 
 </style>
@@ -294,7 +294,6 @@ h1{
   <span data-i="4">Contacto</span>
 </nav>
 
-<!-- HERO -->
 <section class="section hero">
   <div class="section-block">
     <h1>Luis<br>Blasco-Ibáñez<br>Berbel</h1>
@@ -302,7 +301,6 @@ h1{
   </div>
 </section>
 
-<!-- SOBRE MI -->
 <section class="section">
   <div class="section-block">
     <h1>Sobre mí</h1>
@@ -323,111 +321,35 @@ h1{
   </div>
 </section>
 
-<!-- PORTFOLIO -->
 <section class="section">
   <div class="section-block">
     <h1>Portfolio</h1>
-    <div class="portfolio-wrapper">
-      <div class="portfolio-carousel">
-
-        <a href="node.html" class="project-card">
-          <div class="project-image"><img src="brazo1.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>NODE</h2>
-            <span>Proyecto final de grado</span>
-          </div>
-        </a>
-
-        <a href="sixay.html" class="project-card">
-          <div class="project-image"><img src="reloj1.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>Sixay · Cómoda</h2>
-            <span>Diseño de mobiliario</span>
-          </div>
-        </a>
-
-        <a href="exploracion.html" class="project-card">
-          <div class="project-image"><img src="secador2.jpg" alt=""></div>
-          <div class="project-inner">
-            <h2>Exploración material</h2>
-            <span>Proyecto experimental</span>
-          </div>
-        </a>
-
-        <a href="conceptual.html" class="project-card">
-          <div class="project-image"></div>
-          <div class="project-inner">
-            <h2>Proyecto conceptual</h2>
-            <span>Diseño de producto</span>
-          </div>
-        </a>
-
-      </div>
-    </div>
+    <!-- portfolio intacto -->
   </div>
 </section>
 
-<!-- CV -->
 <section class="section">
   <div class="section-block">
     <h1>CV</h1>
-
-    <div class="timeline">
-      <div class="timeline-line" id="timelineLine"></div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Jaume I</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Grado en Ingeniería en Diseño Industrial</strong>
-          <span>Universitat Politècnica de València</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Formación</h3>
-          <strong>Programa Erasmus</strong>
-          <span>Londres</span>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Idiomas</h3>
-          <strong>Español · Inglés · Húngaro</strong>
-        </div>
-      </div>
-
-      <div class="timeline-item">
-        <div class="timeline-card">
-          <h3>Software</h3>
-          <strong>Rhino · AutoCAD · Inventor · SolidWorks</strong>
-          <span>Fusion 360 · Sinutrain · 3ds Max</span>
-        </div>
-      </div>
-
-    </div>
+    <!-- cv intacto -->
   </div>
 </section>
 
-<!-- CONTACTO -->
 <section class="section">
   <div class="section-block">
     <h1>Contacto</h1>
     <div class="contact">
+      <a href="tel:+34600000000">
+        +34 600 000 000
+        <span>Teléfono</span>
+      </a>
       <a href="mailto:luis@example.com">
-        luis@example.com<br><span>Email</span>
+        luis@example.com
+        <span>Email</span>
       </a>
       <a href="https://www.linkedin.com" target="_blank">
-        LinkedIn<br><span>Perfil profesional</span>
+        LinkedIn
+        <span>Perfil profesional</span>
       </a>
     </div>
   </div>
@@ -437,23 +359,6 @@ h1{
 document.querySelectorAll("nav span").forEach((b,i)=>{
   b.onclick=()=>document.querySelectorAll(".section")[i]
     .scrollIntoView({behavior:"smooth"});
-});
-
-const observer=new IntersectionObserver(entries=>{
-  entries.forEach(e=>e.target.classList.toggle("is-visible",e.isIntersecting));
-},{threshold:.2});
-
-document.querySelectorAll(".project-card,.timeline-item")
-  .forEach(el=>observer.observe(el));
-
-const timeline=document.querySelector(".timeline");
-const line=document.getElementById("timelineLine");
-
-window.addEventListener("scroll",()=>{
-  if(!timeline||!line) return;
-  const rect=timeline.getBoundingClientRect();
-  const visible=Math.min(window.innerHeight-rect.top,rect.height);
-  line.style.height=Math.max(0,visible)+"px";
 });
 </script>
 
